--- a/index.html
+++ b/index.html
@@ -111,9 +111,12 @@
        </div>
    </header>
 
-   <div class="col-sm-12 col-md-12 col-lg-12 main-block">
+   <div class="col-sm-12 col-md-12 col-lg-12 main-block home-page" style="margin-top: 24px">
        <div class="container">
-           <div class="row" style="margin-bottom: 72px">
+           <div class="row" style="margin-bottom: 24px">
+               <div class="col-sm-12 col-md-12 col-lg-12">
+                   <div class="home-page-top-block"></div>
+               </div>
                <div class="col-sm-12 col-md-6 col-lg-6" style="padding-right: 16px; width: 664px; margin-right: 32px;">
                    <div class="img_1">
                        <div class="img-content-top">
@@ -165,31 +168,31 @@
                    </div>
                </div>
            </div>
-           <div class="col-sm-12 col-md-8 col-lg-8 top-news-block">
+           <div class="col-sm-12 col-md-9 col-lg-9 top-news-block" style="padding-right: 24px;">
                <div class="top-news">
                    <h2>Top News</h2>
                </div>
                <div class="top-news-block-item">
-               <div class="top-news-block-img">
-                   <img src="images/luke-chesser-LfSuZbuqzco-unsplash.png" width="100%">
+                   <div class="top-news-block-img">
+                       <img src="images/luke-chesser-LfSuZbuqzco-unsplash.png" width="100%">
+                   </div>
+                   <div class="top-news-block-text">
+                       <p class="text-top">
+                           <i class="fa fa-clock-o" aria-hidden="true"></i>
+                           <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                       </p>
+                       <h4>New Leak Suggests iPad Pro Magic Keyboard Could Be Available For More Models</h4>
+                       <p>
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad.
+                       </p>
+                       <p>
+                           <a href="#">MORE</a>
+                       </p>
+                   </div>
                </div>
-               <div class="top-news-block-text">
-                   <p class="text-top">
-                       <i class="fa fa-clock-o" aria-hidden="true"></i>
-                       <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
-                   </p>
-                   <h4>New Leak Suggests iPad Pro Magic Keyboard Could Be Available For More Models</h4>
-                   <p>
-                       The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                       The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                       The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                       The iPad Pro’s Magic Keyboard could become available to additional iPad.
-                   </p>
-                   <p>
-                       <a href="#">MORE</a>
-                   </p>
-               </div>
-           </div>
                <div class="top-news-block-item">
                    <div class="top-news-block-img">
                        <img src="images/daniel-korpai-mO-uPVwGVI0-unsplash.png" width="100%">
@@ -232,6 +235,7 @@
                        </p>
                    </div>
                </div>
+               <div class="home-page-top-new-block1"></div>
                <div class="top-news-block-item">
                    <div class="top-news-block-img">
                        <img src="images/thisisengineering-raeng-sbVu5zitZt0-unsplash.png" width="100%">
@@ -295,6 +299,7 @@
                        </p>
                    </div>
                </div>
+               <div class="home-page-top-new-block2"></div>
                <div class="top-news-block-item">
                    <div class="top-news-block-img">
                        <img src="images/scott-graham-5fNmWej4tAA-unsplash.png" width="100%">
@@ -339,49 +344,28 @@
                </div>
                <div class="top-news-block-item">
                    <div class="top-news-block-img">
-                       <img src="images/luke-chesser-LfSuZbuqzco-unsplash.png" width="100%">
-                   </div>
-                   <div class="top-news-block-text">
-                       <p class="text-top">
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
-                       </p>
-                       <h4>New Leak Suggests iPad Pro Magic Keyboard Could Be Available For More Models</h4>
-                       <p>
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad.
-                       </p>
-                       <p>
-                           <a href="#">MORE</a>
-                       </p>
-                   </div>
-               </div>
-               <div class="top-news-block-item">
-                   <div class="top-news-block-img">
-                       <img src="images/daniel-korpai-mO-uPVwGVI0-unsplash.png" width="100%">
-                   </div>
-                   <div class="top-news-block-text">
-                       <p class="text-top">
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
-                       </p>
-                       <h4>New Leak Suggests iPad Pro Magic Keyboard Could Be Available For More Models</h4>
-                       <p>
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
-                           The iPad Pro’s Magic Keyboard could become available to additional iPad.
-                       </p>
-                       <p>
-                           <a href="#">MORE</a>
-                       </p>
-                   </div>
-               </div>
-               <div class="top-news-block-item">
-                   <div class="top-news-block-img">
                        <img src="images/thisisengineering-raeng-sbVu5zitZt0-unsplash.png" width="100%">
+                   </div>
+                   <div class="top-news-block-text">
+                       <p class="text-top">
+                           <i class="fa fa-clock-o" aria-hidden="true"></i>
+                           <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                       </p>
+                       <h4>New Leak Suggests iPad Pro Magic Keyboard Could Be Available For More Models</h4>
+                       <p>
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad models in the future, according to a leaker.
+                           The iPad Pro’s Magic Keyboard could become available to additional iPad.
+                       </p>
+                       <p>
+                           <a href="#">MORE</a>
+                       </p>
+                   </div>
+               </div>
+               <div class="top-news-block-item">
+                   <div class="top-news-block-img">
+                       <img src="images/scott-graham-5fNmWej4tAA-unsplash.png" width="100%">
                    </div>
                    <div class="top-news-block-text">
                        <p class="text-top">
@@ -404,7 +388,10 @@
                    <button>LOAD MORE</button>
                </div> -->
            </div>
-           <div class="col-sm-12 col-md-4 col-lg-4 top-news-block-right">
+           <div class="col-sm-12 col-md-3 col-lg-3" style="padding: 0">
+               <div class="home-page-before-trending-post"></div>
+           </div>
+           <div class="col-sm-12 col-md-3 col-lg-3 top-news-block-right">
                <div class="trending-posts">
                    <h2>Trending posts</h2>
                </div>
@@ -539,7 +526,7 @@
                    </div>
                </div>
            </div>
-           <div class="col-sm-12 col-md-6 col-lg-4 most-viewed">
+           <div class="col-sm-12 col-md-3 col-lg-3 most-viewed">
                 <div class="footer-title subscribe">
                     <span>Subscribe to our mailing list</span>
                 </div>
@@ -558,6 +545,7 @@
                         <button>SUBSCRIBE</button>
                     </div>
                 </div>
+                <div class="home-page-after-subscribe"></div>
            </div>
        </div>
    </div>
