--- a/post.html
+++ b/post.html
@@ -108,8 +108,11 @@
         </div>
     </header>
 
-   <div class="col-sm-12 col-md-12 col-lg-12 post-main-block">
+   <div class="col-sm-12 col-md-12 col-lg-12 post-main-block" style="margin-top: 24px">
        <div class="container">
+           <div class="col-sm-12 col-md-12 col-lg-12">
+               <div class="home-page-top-block" style="margin-bottom: 48px"></div>
+           </div>
            <div class="col-sm-12 col-md-8 col-lg-8 item-block">
                <div class="item-block-title">
                    <h1>Tesla Model S Becomes First Electric Car with EPA-Rated 647 km Range</h1>
@@ -135,6 +138,10 @@
                        <p>
                            “While each of these changes are relatively small in individual impact, our unique ability to introduce them into active manufacturing lines enables significant gains in efficiency, range, and overall value when combined,” explained the company.
                        </p>
+                   </div>
+                   <div style="display: flex">
+                       <div class="home-page-top-new-block1" style="margin: 30px 123px 208px 0;"></div>
+                       <div class="home-page-top-new-block2" style="margin: 60px 0 0 0;"></div>
                    </div>
                    <div class="item-block-img" style="display: flex">
                        <div>
@@ -325,6 +332,7 @@
                         <button>SUBSCRIBE</button>
                     </div>
                 </div>
+                <div class="home-page-after-subscribe" style="margin-top: 64px;"></div>
             </div>
        </div>
 
@@ -382,10 +390,13 @@
                        </div>
                    </div>
                </div>
+               <div class="col-sm-12 col-md-12 col-lg-12">
+                   <div class="before-comment-block"></div>
+               </div>
            </div>
        </div>
        <div class="container">
-           <div class="col-sm-12 col-md-12 col-lg-12 comments-block-bottom" style="margin-top: 216px;">
+           <div class="col-sm-12 col-md-12 col-lg-12 comments-block-bottom" style="margin-top: 66px; margin-bottom: 42px">
                <div class="comments-title">
                    <h3>Write a comment</h3>
                </div>
